# cosmotd

./: .gitignore  CMakeLists.txt  README.md  model_classifications.csv  todo.md
include/: application.h  buffer.h  dw_simulation.h  errors.h  framebuffer.h  log.h  shader.h  shaderCOPY.h  shader_program.h  simulation.h  texture.h
python_scripts/: check_fits.py  cividis_colormap.qoi  companion_axion.data  convert_mpl_colormap_to_png.py  cosmic_strings_0_large.data  inferno_colormap.ctdd  inferno_colormap.qoi  magma_colormap.ctdd  magma_colormap.qoi  main.ipynb  mpl_colormap_data.py  parameter_list.py  parameter_list_check.py  plasma_colormap.qoi  plot_string_count.py  potential.py  qoi_encoder.py  read_png.py  single_axion_304.data  single_axion_504.data  single_axion_large.data  string_count_utils.py  turbo_colormap.ctdd  turbo_colormap.qoi  twilight_colormap.qoi  twilight_shifted_colormap.ctdd  twilight_shifted_colormap.qoi  viridis_colormap.ctdd  viridis_colormap.qoi  visualise_string_count.py
python_scripts/sc_data/: string_count_trial0.data  string_count_trial1.data  string_count_trial10.data  string_count_trial11.data  string_count_trial12.data  string_count_trial13.data  string_count_trial14.data  string_count_trial15.data  string_count_trial16.data  string_count_trial17.data  string_count_trial18.data  string_count_trial19.data  string_count_trial2.data  string_count_trial20.data  string_count_trial21.data  string_count_trial22.data  string_count_trial23.data  string_count_trial24.data  string_count_trial25.data  string_count_trial26.data  string_count_trial27.data  string_count_trial28.data  string_count_trial29.data  string_count_trial3.data  string_count_trial30.data  string_count_trial31.data  string_count_trial32.data  string_count_trial33.data  string_count_trial34.data  string_count_trial35.data  string_count_trial36.data  string_count_trial37.data  string_count_trial38.data  string_count_trial39.data  string_count_trial4.data  string_count_trial40.data  string_count_trial41.data  string_count_trial42.data  string_count_trial43.data  string_count_trial44.data  (+60 more)
src/: application.cpp  buffer.cpp  framebuffer.cpp  log.cpp  main.cpp  main_scaffold.cpp  shader.cpp  shader_program.cpp  simulation.cpp  texture.cpp
src/colormaps/: cividis_colormap.ctdd  plasma_colormap.ctdd  twilight_colormap.ctdd
src/data/: box_test.ctdd  box_test2.ctdd  box_test3.ctdd  companion_axion_M200_N200_np23213241.ctdd  cosmic_strings_M200_N200_np16579.ctdd  cosmic_strings_M200_N200_np20228.ctdd  cosmic_strings_M200_N200_np489744.ctdd  domain_walls_M200_N200_np486761876.ctdd  grid_test.ctdd  laplacian_test.ctdd  phi_to_laplacian_test.ctdd  same_value_test.ctdd  single_axion_M300_N300_np1897198.ctdd  single_axion_M300_N300_np20228.ctdd  single_axion_n1.ctdd  single_axion_n1_check_phase.ctdd  single_axion_string_count.data  small_cosmic_string_test.ctdd  small_grid_test.ctdd  small_medium_grid_test.ctdd  test1.data  test2.data  test_file.ctdd  vertical_strip.ctdd
src/data/default/: companion_axion_M256_N256_np20228.ctdd  companion_axion_M300_N300_np20228.ctdd  cosmic_strings_M256_N256_np20228.ctdd  domain_walls_M200_N200_np20228.ctdd  domain_walls_M256_N256_np20228.ctdd
src/shaders/: calculate_laplacian.glsl  calculate_laplacian2.glsl  calculate_phase.glsl  companion_axion.glsl  cosmic_strings.glsl  cosmic_strings_original.glsl  detect_strings.glsl  detect_walls.glsl  domain_walls.glsl  evolve_field.glsl  evolve_velocity.glsl  evolve_velocity_acceleration.glsl  fragment.glsl  plot_field.glsl  plot_phase.glsl  plot_strings.glsl  single_axion.glsl  texture_fragment.glsl  texture_vertex.glsl  triangle_fragment.glsl  triangle_vertex.glsl  update_acceleration.glsl  vertex.glsl
test_data/data/: cosmic_strings_seed0_16x16_step1.ctdd  cosmic_strings_seed0_16x16_step2.ctdd  domain_walls_seed0_16x16_step1.ctdd
